--- a/index.html
+++ b/index.html
@@ -5,5 +5,29 @@
   </head>
   <body>
     <p id="loading">loading&hellip;</p>
+
+    <script id="template" type="x-template/hogan">
+      <div class="kitty" id="kitty_{{id}}">
+        <h1 class="title">
+          <a href="https://flickr.com/photos/{{owner}}/{{id}}">
+            {{title}}
+          </a>
+        </h1>
+        <p class="credit">
+          by
+          <a href="https://flickr.com/photos/{{owner}}">
+            {{ownername}}
+          </a>
+          on
+          <a href="https://flickr.com/">Flickr</a>
+        </p>
+        <img src="{{url_z}}" alt="{{title}}" class="kitty_pic" />
+      </div>
+    </script>
+
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/hogan.js/3.0.0/hogan.min.js"></script>
+    <script type="text/javascript" src="kitten.zone.js"></script>
+    <script type="text/javascript" src="https://api.flickr.com/services/rest/?method=flickr.photos.search&api_key=99e16be1d9786c02d4b55938804c5d9f&tags=kitten&license=1%2C2%2C3%2C4%2C5%2C7%2C8&extras=owner_name%2Curl_z%2Clicense&per_page=10&format=json&safe_search=1"></script>
   </body>
 </html>
